privacy policy terms ve site baslık

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     
 
-    <title>AccValo.Shop </title>
+    <title>AccValo.Shop - Valorant Account </title>
+    <meta
+      name="description"
+      content="AccValo.Shop - The leading global Valorant account and skin sales platform. Safe, fast shopping and 24/7 live support!"
+    />
   </head>
   <style>
     h1 p h2 a i {
